[gd_scene load_steps=46 format=3 uid="uid://bofennc76qhna"]

[ext_resource type="Script" path="res://Assets/Scripts/Player/Player.gd" id="1_qcmka"]
[ext_resource type="Texture2D" uid="uid://bau5ifxlripkb" path="res://sprites/icon.svg" id="2_7aqug"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://cfavu8gg88k5d" path="res://Assets/Sprites/PlayerTree.tres" id="2_k7as6"]
[ext_resource type="Script" path="res://Assets/Scripts/Player/PlayerFSM.gd" id="3_jsj1k"]
[ext_resource type="Texture2D" uid="uid://d10ktlovka346" path="res://sprites/character animations/main-character-normal-walk.png" id="3_krrke"]
[ext_resource type="Texture2D" uid="uid://c7dhe0dru6cha" path="res://Assets/Sprites/Placeholder/point_light.jpg" id="7_6cbbv"]
[ext_resource type="Texture2D" uid="uid://bqup0fjghn5of" path="res://Assets/Sprites/Placeholder/2d_light.png" id="7_huq42"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2swoh"]
radius = 7.5
height = 28.0

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_h2u83"]

[sub_resource type="Animation" id="Animation_jlggy"]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Normal:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Normal:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DamageArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_4cxxn"]
resource_name = "Damaged"

[sub_resource type="Animation" id="Animation_l68dh"]
resource_name = "Dead"

[sub_resource type="Animation" id="Animation_0oq88"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Normal:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Normal:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_t5b5r"]
resource_name = "Idle_D"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Normal:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle_D"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Normal:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kxxn0"]
resource_name = "Idle_L"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Normal:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle_L"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Normal:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7v6pl"]
resource_name = "Idle_R"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Normal:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle_R"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Normal:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4b8dp"]
resource_name = "Idle_U"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Normal:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk_U"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Normal:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0pi6p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Normal:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Normal:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DamageArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_j168c"]
resource_name = "Walk_D"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Normal:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk_D"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Normal:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_benoj"]
resource_name = "Walk_L"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Normal:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk_L"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Normal:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_k3lwu"]
resource_name = "Walk_R"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Normal:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk_R"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Normal:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_eubt5"]
resource_name = "Walk_U"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Normal:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk_U"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Normal:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eh0qj"]
_data = {
"Attack": SubResource("Animation_jlggy"),
"Damaged": SubResource("Animation_4cxxn"),
"Dead": SubResource("Animation_l68dh"),
"Idle": SubResource("Animation_0oq88"),
"Idle_D": SubResource("Animation_t5b5r"),
"Idle_L": SubResource("Animation_kxxn0"),
"Idle_R": SubResource("Animation_7v6pl"),
"Idle_U": SubResource("Animation_4b8dp"),
"RESET": SubResource("Animation_0pi6p"),
"Walk_D": SubResource("Animation_j168c"),
"Walk_L": SubResource("Animation_benoj"),
"Walk_R": SubResource("Animation_k3lwu"),
"Walk_U": SubResource("Animation_eubt5")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_5hok8"]
atlas = ExtResource("3_krrke")
region = Rect2(0, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4uh7v"]
atlas = ExtResource("3_krrke")
region = Rect2(160, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_81kur"]
atlas = ExtResource("3_krrke")
region = Rect2(240, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oub70"]
atlas = ExtResource("3_krrke")
region = Rect2(120, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h2l2"]
atlas = ExtResource("3_krrke")
region = Rect2(0, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh5tp"]
atlas = ExtResource("3_krrke")
region = Rect2(20, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_idmai"]
atlas = ExtResource("3_krrke")
region = Rect2(40, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip3q7"]
atlas = ExtResource("3_krrke")
region = Rect2(60, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrxn2"]
atlas = ExtResource("3_krrke")
region = Rect2(160, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p78k7"]
atlas = ExtResource("3_krrke")
region = Rect2(180, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ees5u"]
atlas = ExtResource("3_krrke")
region = Rect2(200, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pbal"]
atlas = ExtResource("3_krrke")
region = Rect2(220, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcvdf"]
atlas = ExtResource("3_krrke")
region = Rect2(240, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_baj1e"]
atlas = ExtResource("3_krrke")
region = Rect2(260, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8588e"]
atlas = ExtResource("3_krrke")
region = Rect2(280, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a51sy"]
atlas = ExtResource("3_krrke")
region = Rect2(300, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8oy1n"]
atlas = ExtResource("3_krrke")
region = Rect2(80, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x138g"]
atlas = ExtResource("3_krrke")
region = Rect2(100, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_am42i"]
atlas = ExtResource("3_krrke")
region = Rect2(120, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1obf"]
atlas = ExtResource("3_krrke")
region = Rect2(140, 0, 20, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a8dbl"]
animations = [{
"frames": [],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7aqug")
}],
"loop": true,
"name": &"Damaged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7aqug")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hok8")
}],
"loop": true,
"name": &"Idle_D",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uh7v")
}],
"loop": true,
"name": &"Idle_L",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_81kur")
}],
"loop": true,
"name": &"Idle_R",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oub70")
}],
"loop": true,
"name": &"Idle_U",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7aqug")
}],
"loop": true,
"name": &"Interact",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h2l2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh5tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idmai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip3q7")
}],
"loop": true,
"name": &"Walk_D",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrxn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p78k7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ees5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pbal")
}],
"loop": true,
"name": &"Walk_L",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcvdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_baj1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8588e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a51sy")
}],
"loop": true,
"name": &"Walk_R",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8oy1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x138g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am42i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1obf")
}],
"loop": true,
"name": &"Walk_U",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_o26bc"]
radius = 14.0357

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 129
collision_mask = 129
script = ExtResource("1_qcmka")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_2swoh")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = ExtResource("2_k7as6")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_h2u83")
parameters/Idle/blend_position = Vector2(-0.0240296, 0.886463)
parameters/Walk/blend_position = Vector2(-0.00369686, -0.860262)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eh0qj")
}

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("3_jsj1k")

[node name="Normal" type="AnimatedSprite2D" parent="."]
z_index = 4
sprite_frames = SubResource("SpriteFrames_a8dbl")
animation = &"Attack"

[node name="Disguised" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 4
sprite_frames = SubResource("SpriteFrames_a8dbl")
animation = &"Attack"

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_o26bc")

[node name="Timers" type="Node2D" parent="."]

[node name="LoadSaveSystemTimer" type="Timer" parent="Timers"]
wait_time = 0.8
one_shot = true
autostart = true

[node name="SFX" type="Node2D" parent="."]

[node name="Walk" type="AudioStreamPlayer2D" parent="SFX"]

[node name="Damaged" type="AudioStreamPlayer2D" parent="SFX"]
position = Vector2(0, -1)

[node name="Hp" type="AudioStreamPlayer2D" parent="SFX"]

[node name="Death" type="AudioStreamPlayer2D" parent="SFX"]

[node name="Attack" type="AudioStreamPlayer2D" parent="SFX"]

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
range_item_cull_mask = 14
shadow_enabled = true
shadow_color = Color(0.0901961, 0.0901961, 0.0901961, 0.431373)
shadow_item_cull_mask = 14
texture = ExtResource("7_huq42")
texture_scale = 20.0

[node name="PlayerLight" type="PointLight2D" parent="."]
visible = false
energy = 0.5
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.431373)
shadow_item_cull_mask = 15
texture = ExtResource("7_6cbbv")
texture_scale = 4.0

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="timeout" from="Timers/LoadSaveSystemTimer" to="." method="_on_load_save_system_timer_timeout"]
